# EAE_Firmware

./: .gitignore  CMakeLists.txt  README.md  run.sh
Core/Inc/: Config.hpp  PidController.hpp  StateMachine.hpp
Core/Src/: PidController.cpp  StateMachine.cpp  main.cpp
Drivers/Inc/: CANDefs.hpp  CANParam.hpp  CANParser.hpp  CANSocket.hpp
Drivers/Src/: CANParser.cpp  CANSocket.cpp
src/: CanBus.cpp  CanBus.h  PidController.cpp  PidController.h  StateMachine.cpp  StateMachine.h  main.cpp
tests/: test_canparser.cpp  test_pid.cpp  test_statemachine.cpp
